# rainbow

./: .gitignore  Cargo.toml  README.md
benches/: cracking.rs  hashing.rs
src/: lib.rs  main.rs
