[package]
name = "rainbow"
version = "1.3.0"
edition = "2024"

[dependencies]
sha2 = "0.11.0-rc.2"
md5 = "0.8.0"
hex = "0.4.3"
clap = { version = "4.5.47", features = ["derive"] }
rayon = "1.11.0"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "cracking"
harness = false

[[bench]]
name = "hashing"
harness = false

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"